# smallbufreader

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml
.github/workflows/: ci.yml
benches/: sync_buf_reader_benchmark.rs  sync_small_buf_reader_benchmark.rs  util.rs
src/: lib.rs
tests/: sync_small_buf_reader_tests.rs
